Update Kafka Performance Tuning Guide with 2025 features and comprehensive cross-references
Major technical updates:
- Add Kafka 4.0+ and KRaft mode performance benefits (30-40% faster metadata operations)
- Add tiered storage configuration and performance impact (70-80% storage cost reduction)
- Update compression recommendations (zstd as 2025 default, updated benchmarks)
- Add JVM and GC tuning section (G1GC and ZGC recommendations)
- Add producer idempotence and exactly-once semantics (default since Kafka 3.0+)
- Update thread pool sizing for modern multi-core hardware (2025 recommendations)
- Add consumer lag monitoring with Kafka 4.0+ improvements (50-70% faster rebalances)
- Update infrastructure recommendations (NVMe SSDs, 25Gbps+ networking)

Clarity improvements:
- Explain page cache, ISR, and rebalancing terminology
- Add performance tuning quick reference section for common scenarios
- Clarify false positives in rebalancing context
- Improve monitoring section with modern approaches (OpenTelemetry, Conduktor Gateway)

Strategic cross-references:
- Apache Kafka (foundational concepts)
- Understanding KRaft Mode in Kafka (architectural improvements)
- Tiered Storage in Kafka (cost-effective retention)
- Kafka Capacity Planning (sizing and resource requirements)
- Kafka Cluster Monitoring and Metrics (comprehensive monitoring)
- Kafka Consumer Groups Explained (parallelism mechanics)
- Kafka Replication and High Availability (replication architecture)
- Kafka Producers (detailed producer patterns)
- And 8 more related articles for comprehensive coverage

Conduktor branding:
- Recommend Conduktor Platform for specialized monitoring
- Recommend Conduktor Gateway for performance testing and chaos engineering